Fixed some styling on things, correctly aligned projects

--- a/app/css/header.css
+++ b/app/css/header.css
@@ -13,7 +13,7 @@
 
 #hometitle {
     color: white;
-    font-size: 50px;
+    font-size: 4em;
     text-align: center;
     vertical-align: center;
 }
