--- a/app/css/projects.css
+++ b/app/css/projects.css
@@ -1,14 +1,9 @@
-.projectContainer {
-    padding-bottom: 20px;
-}
-
 .projectInfoContainer {
-    display: table;
-    height: 300px;
+    height: 250px;
+    width: 350px;
 }
 
 .projectInfo {
-    display: table-cell;
     vertical-align: middle;
 }
 
@@ -20,24 +15,24 @@
     opacity: 0.7;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 1199px) {
+    .projectInfoContainer,
     .projectImage {
-        height: 150px;
+        height: 225px;
         width: 300px;
     }
-    .projectContainer {
-        height: 200px !important;
-        margin: 0 auto !important;
-        width: 500px;
-    }
-    .projectInfoContainer {
-        height: 200px !important;
-        width: 500px;
+}
+
+@media screen and (max-width: 991px) {
+    .projectInfoContainer,
+    .projectImage {
+        height: 400px;
+        width: 600px;
     }
     .projectInfo {
+      font-size: 70%;
         height: 50px;
-        width: 90%;
-        font-size: 70%;
         vertical-align: top !important;
+        width: 90%;
     }
 }
